--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "chiara-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://chiarascorti.github.io/chiara",
+  "homepage": "https://chiarascorti.github.io/chiara/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
